# poscar2openmx

./: .gitignore  README.md  __main__.py  poscar2openmx.py  pyproject.toml
core/: expand_basis.py  omx_optimized_bases.py  parameter_reader.py  write_openmx.py  write_openmx_str.py
example/: POSCAR  POSCAR.C  param_file
examples/: POSCAR  param_file
examples/HoAgGe_3x2/: commandline_examples.txt  params_file  vec_file
poscar2openmx/: __main__.py  cli.py  convert.py
poscar2openmx/io/: __init__.py  parameter_reader.py  read_poscar.py  write_openmx_str.py
poscar2openmx/utils/: coordinate_transform.py  get_bandpath.py  symbol2atomicN.py
